[package]
name = "byte_bite"
version = "0.1.4"
authors = ["Tapas Das", "dlaststark@gmail.com"]
edition = "2021"
description = "Take a bite out of the news and updates with ByteBite, the bite-sized RSS feed reader that delivers all the essential news in a pocket-size format."
readme = "README.md"
repository = "https://github.com/oss-rust-github-io/byte_bite"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossterm = { version = "0.19", features = [ "serde" ] }
log = "0.4"
log4rs = "1"
reqwest = { version = "0.11", features = ["json","blocking"] }
rss = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.12.0", features = ["full"] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
unicode-width = "0.1.10"